--- a/assets/styles/common/variables/_fonts.scss
+++ b/assets/styles/common/variables/_fonts.scss
@@ -1,16 +1,16 @@
 ///// Font /////
 // font family
 // (?) Fonts added with wp_enqueue in setup.php (?)
-$font1: 'Oswald', sans-serif;
+$font1: 'Lato', sans-serif;
 $font2: 'Roboto', sans-serif;
 $icon: 'icomoon';
 
 ///// Font weight /////
-$font1-thinner: 300;
-$font1-thin: 300;
+$font1-thinner: 400;
+$font1-thin: 400;
 $font1-normal: 400;
-$font1-bold: 600;
-$font1-bolder: 700;
+$font1-bold: 700;
+$font1-bolder: 900;
 
 $font2-thinner: 400;
 $font2-thin: 400;
