--- a/assets/styles/components/_mobile-menu-toggle.scss
+++ b/assets/styles/components/_mobile-menu-toggle.scss
@@ -5,7 +5,7 @@ $button-height: 50px; // The height of the button area
 $button-bg-color: transparent; // The background color of the button area
 $button-bg-color-active: transparent; // The background color of the active button area
 $bar-thickness: 3px; // The thickness of the button bars
-$bar-color: black; // The color of the bars
+$bar-color: white; // The color of the bars
 $button-pad: 0px; // The left/right padding between button area and bars.
 $button-bar-space: 4px; // The spacing between button bars
 $button-transistion-duration: $gen-t; // The transition duration
@@ -14,6 +14,7 @@ $button-transistion-duration: $gen-t; // The transition duration
   background: $button-bg-color;
   border: none;
   appearance: none;
+  margin-left: auto;
   
   @include __MIN( hidemenu ) {
     display: none !important;
