--- a/assets/styles/common/variables/_smart-variables.scss
+++ b/assets/styles/common/variables/_smart-variables.scss
@@ -10,6 +10,14 @@ $smart-variables: (
   container-m: (
     base: 20px,
   ),
+  sct-m: (
+    base: 30px,
+    md: 80px,
+  ),
+  sct-m-small: (
+    base: 20px,
+    md: 40px,
+  ),
 
   //||||||||||||||||||||||||||||||||||||||||||||||||||
   // Header
