--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -52,7 +52,8 @@
 @import "components/blocks/wordpress/wp-block-separator";
 
 
-@import "layouts/templates/page";
+@import "layouts/templates/page"; 
+@import "layouts/templates/page-header";
 @import "layouts/templates/single";
 @import "layouts/templates/front-page";
 @import "layouts/templates/404";
