--- a/assets/styles/components/_breadcrumbs.scss
+++ b/assets/styles/components/_breadcrumbs.scss
@@ -8,10 +8,11 @@
   @include alignwide;
   @include quickflex( row, flex-start, flex-start, wrap );
   position: relative;
-  padding: 30px 0;
+  padding: 15px 0;
 }
 
 .breadcrumbs__item {
+  font-size: 1.4rem;
 
   &::after {
     content: '>';
