--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -51,6 +51,7 @@
 @import "components/blocks/wordpress/wp-block-column";
 @import "components/blocks/wordpress/wp-block-separator";
 
+@import "components/blocks/theme/header-video";
 @import "components/blocks/theme/partners";
 
 @import "layouts/templates/page"; 
