--- a/assets/styles/common/variables/_general.scss
+++ b/assets/styles/common/variables/_general.scss
@@ -3,3 +3,5 @@ $gen-t: 0.4s;
 $gen-bezier: cubic-bezier(0.250, 0.460, 0.450, 0.940);
 $mw-alignwide: 1320px;
 $mw-aligndefault : 895px;
+$alignwide-gutter: calc( ( (100vw - #{$mw-alignwide}) /2 ) - 9px );
+$aligndefault-gutter: calc( ( (100vw - #{$mw-aligndefault}) /2 ) - 9px );
