--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -52,6 +52,7 @@
 @import "components/blocks/wordpress/wp-block-separator";
 
 @import "components/blocks/theme/header-video";
+@import "components/blocks/theme/red-columns";
 @import "components/blocks/theme/partners";
 
 @import "layouts/templates/page"; 
