--- a/assets/styles/components/blocks/theme/_red-columns.scss
+++ b/assets/styles/components/blocks/theme/_red-columns.scss
@@ -22,6 +22,25 @@
     margin-top: 0;
     margin-bottom: 1.5rem;
   }
+
+  .wysiwyg{
+    .btn{
+      margin-top: 1.5rem;
+      margin-bottom: 1.5rem;
+    }
+
+    ol{
+      li:before{
+        color: white;
+      }
+    }
+
+    ul{
+      li:before{
+        background-color: white;
+      }
+    }
+  }
 }
 
 // premiere colonne //
