block info columns

--- a/assets/styles/common/variables/_smart-variables.scss
+++ b/assets/styles/common/variables/_smart-variables.scss
@@ -87,7 +87,7 @@ $smart-variables: (
   // cols specifiques
   cols-partners: (
     base: 1,
-    xxs: 2,
+    xxxs: 2,
     md: 3,
     xl: 6,
   ),
