--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -53,6 +53,7 @@
 
 @import "components/blocks/theme/header-video";
 @import "components/blocks/theme/red-columns";
+@import "components/blocks/theme/info-columns";
 @import "components/blocks/theme/partners";
 
 @import "layouts/templates/page"; 
