--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -34,7 +34,9 @@ body {
   > div,
   > header,
   > footer {
-    flex: 0 1 auto;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: auto;
   }
 
   > .site-header,
@@ -44,7 +46,9 @@ body {
   }
 
   > .content-container {
-    flex: 1 1 auto;
+    flex-grow: 1;
+    flex-shrink: 0;
+    flex-basis: auto;
   }
 }
 
