--- a/assets/styles/components/_wysiwyg.scss
+++ b/assets/styles/components/_wysiwyg.scss
@@ -27,9 +27,9 @@
   
   // Change these.
   $list-lh: 1.5; // Must be unit less
-  $list-symbol-w: 0.35em;
+  $list-symbol-w: 0.25em;
   $list-symbol-h: $list-symbol-w;
-  $list-symbol-space-between-text: 0.75em;
+  $list-symbol-space-between-text: 0.65em;
   
   // You may change these, but they might be better left alone.
   $list-fs: 1em; // If it's EM, font-size must be 1em or the text/shape won't be vertically centered.You may transform: scale(xx); as you wish instead.
@@ -83,7 +83,7 @@
         width: $list-symbol-w;
         height: $list-symbol-h;
         border-radius: $list-symbol-w;
-        background-color: $primary;
+        background-color: $secondary;
 
         // Symbol not centered ?
         // This is the fault of the font-family and the way caracters are placed inside the calculated line-height of the LI.
@@ -105,7 +105,7 @@
       &::before {
         content: counter(nb-list-item) ". ";
         top: 0;
-        color: $primary;
+        color: $secondary;
         
         // Need font-size change for your 1em ?
         // To keep the text vertical-align: middle; (not the real property) we need to not touch the font-size: 1em;
