--- a/assets/styles/components/blocks/theme/_info-columns.scss
+++ b/assets/styles/components/blocks/theme/_info-columns.scss
@@ -3,6 +3,10 @@
   background-image: url('../images/info-columns_bg.jpg');
   background-size: cover;
   background-repeat: no-repeat;
+  
+  .decorated-heading{
+    @include smart-prop('margin-top', sct-m);
+  }
 }
 
 .block-info-columns__inner{
@@ -63,19 +67,30 @@
 }
 
 .info-columns__block__col--icon{
-  width: auto;
+  width: 44px;
   flex: 0 0 auto;
   margin-bottom: 1rem;
   @include __MIN(xxxs){
-    margin-right: 20px;
     margin-bottom: 0;
+  }
+
+  svg{
+    fill: $secondary;
+    width: 24px;
   }
 
   i{
     color: $secondary;
     font-style:normal;
     font-size: 2.4rem;
-    @include __MIN(sm){
+  }
+
+  @include __MIN(sm){
+    width: 60px;
+    svg{
+      width: 40px;
+    }
+    i{
       font-size: 4rem;
     }
   }
