--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -36,6 +36,7 @@
 @import "components/skip-nav";
 @import "components/sitemap";
 @import "components/breadcrumbs";
+@import "components/decorated-heading";
 
 @import "layouts/header";
 @import "layouts/navbar";
@@ -55,6 +56,7 @@
 @import "components/blocks/theme/red-columns";
 @import "components/blocks/theme/info-columns";
 @import "components/blocks/theme/partners";
+@import "components/blocks/theme/cta-columns";
 
 @import "layouts/templates/page"; 
 @import "layouts/templates/page-header";
