--- a/assets/styles/components/nav/_nav-primary.scss
+++ b/assets/styles/components/nav/_nav-primary.scss
@@ -9,9 +9,15 @@
   .nav-item {
     margin-left: 40px;
     .nav-item__link{
-      color: white;
       font: 700 1.4rem $font1;
       text-transform: uppercase;
+      @include underline-link-reverse(white,white);
+    }
+
+    &.active{
+      .nav-item__link{
+        background-size: 100% 1px;
+      }
     }
   }
   
