--- a/inc/acf/image-select-field-type/css/styles.css
+++ b/inc/acf/image-select-field-type/css/styles.css
@@ -67,8 +67,7 @@
   max-height: 60px;
 }
 .image-select__item label img[src$=".svg"] {
-  /* width: 100%;
-  height: 100%; */
+  width: 60px;
 }
 
 .image-select__item label i {
