--- a/assets/styles/components/_buttons.scss
+++ b/assets/styles/components/_buttons.scss
@@ -17,3 +17,22 @@
     transform: translateY(2px);
   }
 }
+
+.donation-btn{
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  &:before{
+    content: "";
+    display:block;
+    width: 40px;
+    height: 40px;
+    background-image: url('../images/icon-donation.png');
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-position: center;
+    margin-right: 1rem;
+  }
+}
