--- a/assets/styles/components/blocks/theme/_partners.scss
+++ b/assets/styles/components/blocks/theme/_partners.scss
@@ -52,10 +52,12 @@
   padding: 20px;
   width: 100%;
   height: 0;
-  padding-bottom: 100%;
+  padding-bottom: calc(90% - 4px);
   position: relative;
   display: block;
   overflow:hidden;
+  border: 2px solid white;
+  transition: border-color $gen-t;
 }
 
 .listing--partners__item__content{
@@ -74,4 +76,15 @@
 
 .listing--partners__item__title{
   font: 700 1.4rem $font1;
+  color: $text;
+  transition: color $gen-t;
+}
+
+a.listing--partners__item__inner{
+  &:hover{
+    border-color: $primary;
+    .listing--partners__item__title{
+      color: $primary;
+    }
+  }
 }
