--- a/assets/styles/layouts/templates/_page-header.scss
+++ b/assets/styles/layouts/templates/_page-header.scss
@@ -1,6 +1,14 @@
 .page-header{
-  height: 300px;
-  background-color: $background;
+  height: auto;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: $secondary;
   @include quickflex(row, center, center, nowrap);
   text-align: center;
+  color: white;
+  @include __MIN(md){
+    height: 300px;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
 }
