video integration et corrections

--- a/assets/styles/components/_wysiwyg.scss
+++ b/assets/styles/components/_wysiwyg.scss
@@ -63,6 +63,7 @@
       position: relative;
       line-height: $list-lh;
       font-size: 100%;
+      margin-bottom: 0.7rem;
 
       &::before {
         content: '';
