--- a/assets/styles/components/blocks/theme/_info-columns.scss
+++ b/assets/styles/components/blocks/theme/_info-columns.scss
@@ -77,21 +77,33 @@
   svg{
     fill: $secondary;
     width: 24px;
+    &.svg-map{
+      width: 20px;
+    }
   }
 
   i{
     color: $secondary;
     font-style:normal;
     font-size: 2.4rem;
+    &.icon-map{
+      font-size: 2rem;
+    }
   }
 
   @include __MIN(sm){
     width: 60px;
     svg{
       width: 40px;
+      &.svg-map{
+        width: 35px;
+      }
     }
     i{
       font-size: 4rem;
+      &.icon-map{
+        font-size: 3.5rem;
+      }
     }
   }
 }
