--- a/assets/styles/components/_wysiwyg.scss
+++ b/assets/styles/components/_wysiwyg.scss
@@ -1,10 +1,13 @@
 .wysiwyg {
 
   p{
-    font-size: 1.6rem;
+    font-size: 1.5rem;
+    @include __MIN(md){
+      font-size: 1.6rem;
+    }
 
     &.has-small-font-size{
-      font-size: 1.4rem;
+      font-size: 1.3rem;
     }
 
     &.has-large-font-size{
@@ -12,8 +15,11 @@
     }
 
     &.intro{
-      font-size: 2rem;
+      font-size: 1.7rem;
       line-height: 1.2;
+      @include __MIN(md){
+        font-size: 2rem;
+      }
     }
 
   }
