--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -3,7 +3,7 @@
   color: white;
   text-align: center;
   padding: 10px 0;
-  font: 400 1.4rem $font1;
+  font: 400 1.4rem $font2-regular;
   @include __MIN(md){
     padding: 30px 0;
   }
