corrections ie et favicons

--- a/assets/styles/components/_wysiwyg.scss
+++ b/assets/styles/components/_wysiwyg.scss
@@ -23,6 +23,12 @@
     }
 
   }
+
+  a:not([class]),
+  a.rank-math-link
+  {
+    @include underline-link-reverse($text, $text);
+  }
   
   //////////////////////////////////////////////////////
   ////////////////// CUSTOMIZED LIST ///////////////////
