--- a/assets/styles/common/_entry-content.scss
+++ b/assets/styles/common/_entry-content.scss
@@ -89,6 +89,12 @@
     color: inherit;
   }
 
+  a:not([class]),
+  a.rank-math-link
+  {
+    @include underline-link-reverse($text, $text);
+  }
+
   a:hover,
   a:focus {
     text-decoration: none;
