--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -144,18 +144,24 @@ h6,
 
 h1,
 .heading-size-1 {
-  font-size: 3.6rem;
+  font-size: 3rem;
   font-weight: 800;
   line-height: 1.138888889;
+  @include __MIN(sm){
+    font-size: 4rem;
+  }
   @include __MIN(md){
-    font-size: 4.8rem;
+    font-size: 5.6rem;
   }
 }
 
 h2,
 .heading-size-2 {
-  font-size: 3.2rem;
+  font-size: 2.8rem;
   color: $primary;
+  @include __MIN(sm){
+    font-size: 3.2rem;
+  }
   @include __MIN(md){
     font-size: 4.8rem;
   }
@@ -163,7 +169,10 @@ h2,
 
 h3,
 .heading-size-3 {
-  font-size: 2.8rem;
+  font-size: 2.5rem;
+  @include __MIN(sm){
+    font-size: 2.8rem;
+  }
 }
 
 h4,
