--- a/assets/styles/components/blocks/theme/_red-columns.scss
+++ b/assets/styles/components/blocks/theme/_red-columns.scss
@@ -74,7 +74,7 @@
       height: 100%;
       background-color: $red-dark;
       position: absolute;
-      right: -40px;
+      left: 100%;
       top: 0;
     }
   }
