--- a/assets/styles/components/blocks/theme/_info-columns.scss
+++ b/assets/styles/components/blocks/theme/_info-columns.scss
@@ -77,6 +77,7 @@
   svg{
     fill: $secondary;
     width: 24px;
+    height: 24px;
     &.svg-map{
       width: 20px;
     }
@@ -95,6 +96,7 @@
     width: 60px;
     svg{
       width: 40px;
+      height: 40px;
       &.svg-map{
         width: 35px;
       }
