--- a/assets/styles/components/blocks/theme/_red-columns.scss
+++ b/assets/styles/components/blocks/theme/_red-columns.scss
@@ -65,7 +65,7 @@
     padding: 40px 40px 40px 80px;
     position: relative;
     top: 40px;
-    left: -40px;
+    margin-left: -40px;
     z-index: 1;
     &:after{
       content: "";
