--- a/assets/styles/components/blocks/wordpress/_wp-block-image.scss
+++ b/assets/styles/components/blocks/wordpress/_wp-block-image.scss
@@ -1,3 +1,19 @@
-.wp-block-image figcaption{
-  font-size:1rem;
+.wp-block-image{
+
+  figcaption{
+    font-size:1rem;
+  }
+
+}
+
+// bogue ie
+.wp-block-column{
+  .wp-block-image .aligncenter, .wp-block-image .alignleft, .wp-block-image .alignright, .wp-block-image.is-resized{
+    display: block;
+    max-width: 100% !important;
+  
+    figcaption{
+      display: block;
+    }
+  }
 }
